--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
        <div class="col-6 col-md-3 mb-4">
         <div class="card text-center" style="width: 100%;  height: 100%;">
           <a href="main_desain/desain1.html">
-             <img src="fitur_desain/desain/Bike 4.png" class="card-img-top" alt="..." style="padding:5%;">
+             <img src="main_desain/desain/bike4.png" class="card-img-top" alt="..." style="padding:5%;">
            </a>
           <div class="card-body">
             <h5 class="card-title">Bike 4</h5>
@@ -280,7 +280,7 @@
       <div class="col-6 col-md-3 mb-4">
         <div class="card text-center" style="width: 100%;  height: 100%;">
           <a href="main_desain/desain2.html">
-             <img src="fitur_desain/desain/mancing 11.png" class="card-img-top" alt="..." style="padding:5%;">
+             <img src="main_desain/desain/mancing11.png" class="card-img-top" alt="..." style="padding:5%;">
            </a>
           <div class="card-body">
             <h5 class="card-title">mancing 11</h5>
@@ -293,10 +293,10 @@
       <div class="col-6 col-md-3 mb-4">
         <div class="card text-center" style="width: 100%;  height: 100%;">
           <a href="main_desain/desain3.html">
-             <img src="fitur_desain/desain/03.png" class="card-img-top" alt="..." style="padding:5%;">
+             <img src="main_desain/desain/vesva4.png" class="card-img-top" alt="..." style="padding:5%;">
            </a>
           <div class="card-body">
-            <h5 class="card-title">Desain 3</h5>
+            <h5 class="card-title">vesva 04</h5>
             <p class="card-text">Rp.5.000</p>
             <a href="main_desain/desain3.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
@@ -306,10 +306,10 @@
       <div class="col-6 col-md-3 mb-4">
         <div class="card text-center" style="width: 100%;  height: 100%;">
           <a href="main_desain/desain4.html">
-             <img src="fitur_desain/desain/04.png" class="card-img-top" alt="..." style="padding:5%;">
+             <img src="main_desain/desain/camping45.png" class="card-img-top" alt="..." style="padding:5%;">
            </a>
           <div class="card-body">
-            <h5 class="card-title">Desain 4</h5>
+            <h5 class="card-title">Camping 45</h5>
             <p class="card-text">Rp.5.000</p>
             <a href="main_desain/desain4.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
@@ -319,10 +319,10 @@
       <div class="col-6 col-md-3 mb-4">
         <div class="card text-center" style="width: 100%;  height: 100%;">
           <a href="main_desain/desain5.html">
-             <img src="fitur_desain/desain/05.png" class="card-img-top" alt="..." style="padding:5%;">
+             <img src="main_desain/desain/summer213.png" class="card-img-top" alt="..." style="padding:5%;">
            </a>
           <div class="card-body">
-            <h5 class="card-title">Desain 5</h5>
+            <h5 class="card-title">summer 213</h5>
             <p class="card-text">Rp.5.000</p>
             <a href="fmain_desain/desain5.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
@@ -332,10 +332,10 @@
       <div class="col-6 col-md-3 mb-4">
         <div class="card text-center" style="width: 100%;  height: 100%;">
           <a href="main_desain/desain6.html">
-             <img src="fitur_desain/desain/06.png" class="card-img-top" alt="..." style="padding:5%;">
+             <img src="main_desain/desain/bucin6.png" class="card-img-top" alt="..." style="padding:5%;">
            </a>
           <div class="card-body">
-            <h5 class="card-title">Desain 6</h5>
+            <h5 class="card-title">Bucin 06</h5>
             <p class="card-text">Rp.5.000</p>
             <a href="main_desain/desain6.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
@@ -345,10 +345,10 @@
       <div class="col-6 col-md-3 mb-4">
         <div class="card text-center" style="width: 100%;  height: 100%;">
           <a href="main_desain/desain7.html">
-             <img src="fitur_desain/desain/07.png" class="card-img-top" alt="..." style="padding:5%;">
+             <img src="main_desain/desain/streetwear 75.png" class="card-img-top" alt="..." style="padding:5%;">
            </a>
           <div class="card-body">
-            <h5 class="card-title">Desain 7</h5>
+            <h5 class="card-title">streetwear 75</h5>
             <p class="card-text">Rp.5.000</p>
             <a href="main_desain/desain7.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
@@ -358,10 +358,10 @@
       <div class="col-6 col-md-3 mb-4">
         <div class="card text-center" style="width: 100%;  height: 100%;">
           <a href="main_desain/desain8.html">
-             <img src="fitur_desain/desain/08.png" class="card-img-top" alt="..." style="padding:5%;">
+             <img src="main_desain/desain/desain66.png" class="card-img-top" alt="..." style="padding:5%;">
            </a>
           <div class="card-body">
-            <h5 class="card-title">Desain 8</h5>
+            <h5 class="card-title">Desain 66</h5>
             <p class="card-text">Rp.5.000</p>
             <a href="main_desain/desain8.html" class="btn btn-primary"><i class="bi bi-eye"></i> Lihat</a>
           </div>
