--- a/main_desain/desain2.html
+++ b/main_desain/desain2.html
@@ -303,7 +303,7 @@
                                                             <!-- <div id="overflow"> -->
 															   <div class="contenerdesain">
                                                      <!-- <div id="desain"> -->
-                                                      <img src="../fitur_desain/desain/mancing 11.png" alt="" style="z-index: 9999;cursor: move;" id="desain">
+                                                      <img src="desain/mancing11.png" alt="" style="z-index: 9999;cursor: move;" id="desain">
                                                      <!-- </div> -->
 																	  <div  id="drag-area">
                                                                <!-- <img src="../desain/01.png" alt="" style="z-index: 9999;"> -->
