--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
   <div class="container mt-5 bg-primary-subtle shadow">
 
     <div class="row text-center" style="padding:3%;">
-      <h5><em>Temukan desain keren dan menarik untuk di sablon</em></h5>
+      <img src="img/banner3.png" alt="">
     </div>
 
     <div class="row justify-content-center"  style=" margin: 2%;">
