--- a/fitur_desain/ajax/coba.html
+++ b/fitur_desain/ajax/coba.html
@@ -1,1 +1,1 @@
-<h1 style="color: red; padding-top: 10%;">hallo</h1>
+<h1 style="color: red; padding-top: 20%; padding-left: 10%;">fitur cari belum tersedia</h1>
