--- a/fitur_desain/page1/page1.html
+++ b/fitur_desain/page1/page1.html
@@ -74,7 +74,7 @@
             </a>
             <div class="card-body">
               <h5 class="card-title">elien 179</h5>
-              <p class="card-text">Rp.5.000</p>
+              <!-- <p class="card-text">Rp.5.000</p> -->
               <a href="desain1.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
             </div>
           </div>
@@ -89,7 +89,7 @@
             </a>
             <div class="card-body">
               <h5 class="card-title">bucin 01</h5>
-              <p class="card-text">Rp.5.000</p>
+              <!-- <p class="card-text">Rp.5.000</p> -->
               <a href="desain2.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
             </div>
           </div>
@@ -104,7 +104,7 @@
             </a>
             <div class="card-body">
               <h5 class="card-title">summer 01</h5>
-              <p class="card-text">Rp.5.000</p>
+              <!-- <p class="card-text">Rp.5.000</p> -->
               <a href="desain3.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
             </div>
           </div>
@@ -119,7 +119,7 @@
             </a>
             <div class="card-body">
               <h5 class="card-title">streetwear the soul</h5>
-              <p class="card-text">Rp.5.000</p>
+              <!-- <p class="card-text">Rp.5.000</p> -->
               <a href="desain4.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
             </div>
           </div>
@@ -134,7 +134,7 @@
             </a>
             <div class="card-body">
               <h5 class="card-title">vesva 36</h5>
-              <p class="card-text">Rp.5.000</p>
+              <!-- <p class="card-text">Rp.5.000</p> -->
               <a href="desain5.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
             </div>
           </div>
@@ -149,7 +149,7 @@
             </a>
             <div class="card-body">
               <h5 class="card-title">sunset 43</h5>
-              <p class="card-text">Rp.5.000</p>
+              <!-- <p class="card-text">Rp.5.000</p> -->
               <a href="desain6.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
             </div>
           </div>
@@ -164,7 +164,7 @@
             </a>
             <div class="card-body">
               <h5 class="card-title">mancing 02</h5>
-              <p class="card-text">Rp.5.000</p>
+              <!-- <p class="card-text">Rp.5.000</p> -->
               <a href="desain7.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
             </div>
           </div>
@@ -179,7 +179,7 @@
             </a>
             <div class="card-body">
               <h5 class="card-title">bike 28</h5>
-              <p class="card-text">Rp.5.000</p>
+              <!-- <p class="card-text">Rp.5.000</p> -->
               <a href="desain8.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
             </div>
           </div>
@@ -194,7 +194,7 @@
             </a>
             <div class="card-body">
               <h5 class="card-title">streetwear an introvert</h5>
-              <p class="card-text">Rp.5.000</p>
+              <!-- <p class="card-text">Rp.5.000</p> -->
               <a href="desain9.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
             </div>
           </div>
@@ -209,7 +209,7 @@
             </a>
             <div class="card-body">
               <h5 class="card-title">one piece 05</h5>
-              <p class="card-text">Rp.5.000</p>
+              <!-- <p class="card-text">Rp.5.000</p> -->
               <a href="desain10.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
             </div>
           </div>
@@ -224,7 +224,7 @@
             </a>
             <div class="card-body">
               <h5 class="card-title">anime 04</h5>
-              <p class="card-text">Rp.5.000</p>
+              <!-- <p class="card-text">Rp.5.000</p> -->
               <a href="desain11.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
             </div>
           </div>
@@ -239,7 +239,7 @@
             </a>
             <div class="card-body">
               <h5 class="card-title">run heart</h5>
-              <p class="card-text">Rp.5.000</p>
+              <!-- <p class="card-text">Rp.5.000</p> -->
               <a href="desain12.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
             </div>
           </div>
