--- a/fitur_desain/page2/page2.html
+++ b/fitur_desain/page2/page2.html
@@ -73,7 +73,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">kingcro 126</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain13.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -88,7 +88,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">summer 191</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain14.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -103,7 +103,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">streetwear nasty soul</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain15.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -118,7 +118,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">urban distro 154</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain16.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -133,7 +133,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">vesva 06</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain17.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -148,7 +148,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">one piece 29</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain18.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -163,7 +163,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">love cat</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain19.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -178,7 +178,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">mancing 42</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain20.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -193,7 +193,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">bucin 07</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain21.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -208,7 +208,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">bike 11</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain22.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -223,7 +223,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">streetwear be great</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain23.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -238,7 +238,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">bone 162</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain24.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
