--- a/fitur_desain/page3/page3.html
+++ b/fitur_desain/page3/page3.html
@@ -73,7 +73,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">shoes 234</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain25.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -88,7 +88,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">sunset 07</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain26.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -103,7 +103,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">streetwear disappoint</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain27.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -118,7 +118,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">willing cat</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain28.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -133,7 +133,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">monster truck 02</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain29.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -148,7 +148,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">bucin 03</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain30.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -163,7 +163,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">camping 85</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain31.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -178,7 +178,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">truck oleng 04</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain32.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -193,7 +193,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">mancing 13</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain33.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -208,7 +208,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">bike 05</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain34.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -223,7 +223,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">streetwear anarchy</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain35.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -238,7 +238,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">burger 271</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Rp.5.000</p> -->
             <a href="desain36.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
