--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">Bike 4</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Bisa custom sesuai keinginan</p> -->
             <a href="main_desain/desain1.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -284,7 +284,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">mancing 11</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Bisa custom sesuai keinginan</p> -->
             <a href="main_desain/desain2.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -297,7 +297,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">vesva 04</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Bisa custom sesuai keinginan</p> -->
             <a href="main_desain/desain3.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -310,7 +310,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">Camping 45</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Bisa custom sesuai keinginan</p> -->
             <a href="main_desain/desain4.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -323,7 +323,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">summer 213</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Bisa custom sesuai keinginan</p> -->
             <a href="fmain_desain/desain5.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -336,7 +336,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">Bucin 06</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Bisa custom sesuai keinginan</p> -->
             <a href="main_desain/desain6.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -349,7 +349,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">streetwear 75</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Bisa custom sesuai keinginan</p> -->
             <a href="main_desain/desain7.html" class="btn btn-primary btn-sm"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
@@ -362,7 +362,7 @@
            </a>
           <div class="card-body">
             <h5 class="card-title">Desain 66</h5>
-            <p class="card-text">Rp.5.000</p>
+            <!-- <p class="card-text">Bisa custom sesuai keinginan</p> -->
             <a href="main_desain/desain8.html" class="btn btn-primary"><i class="bi bi-eye"></i> Lihat</a>
           </div>
         </div>
