--- a/fitur_desain/page3/page3.html
+++ b/fitur_desain/page3/page3.html
@@ -12,10 +12,25 @@
 	<nav class="navbar navbar-dark navbar-expand-lg bg-primary bg-gradient shadow fixed-top mb-5">
       <div class="container-fluid">
         <a class="navbar-brand" href="../page2/page2.html">kembali</a>
-        <form class="d-flex" role="search">
+        <!-- <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Cari desain" aria-label="Search">
         <button class="btn btn-outline-success text-white" type="submit">Cari</button>
-       </form>
+       </form> -->
+       <div class="dropdown">
+        <button class="btn btn-warning dropdown-toggle mt-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        kategori
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="user_fitur/t-shirt/index.html">streetwear</a></li>
+          <li><a class="dropdown-item" href="user_fitur/polo-shirt/index.html">artwork</a></li>
+          <li><a class="dropdown-item" href="user_fitur/ls-shirt/index.html">gathering</a></li>
+          <li><a class="dropdown-item" href="user_fitur/long-sleeve/index.html">komunitas</a></li>
+          <li><a class="dropdown-item" href="user_fitur/hoody/index.html">ultah</a></li>
+          <li><a class="dropdown-item" href="user_fitur/crewneck/index.html">typograpy</a></li>
+          <li><a class="dropdown-item" href="user_fitur/topi/index.html">vintage</a></li>
+          <li><a class="dropdown-item" href="user_fitur/tote-bag/index.html">sport</a></li>
+        </ul>
+       </div>
         <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -272,7 +287,7 @@
 
 <!-- footer -->
 <footer class="bg-primary text-white text-center mt-4">
-  <i class="bi bi-globe"> aplikasisablon.com</i>
+  <i class="bi bi-globe"> sablonstudio.com</i>
   <!-- <p>Printstudio.co.id</p> -->
 </footer>
 <!-- akhir footer -->
