--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient shadow fixed-top">
       <div class="container">
              <a class="navbar-brand" href="#">
-               <p class="mt-1"><i class="bi bi-printer"></i> Aplikasi Sablon</p>
+               <p class="mt-1"><i class="bi bi-printer"></i> Sablon studio</p>
               <!-- <img src="img/logo2.png" alt="Bootstrap" width="50"> -->
             </a>
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -379,7 +379,7 @@
 
 <!-- footer -->
 <footer class="bg-primary text-white text-center mt-4">
-  <i class="bi bi-globe"> aplikasisablon.com</i>
+  <i class="bi bi-globe"> sablonstudio.com</i>
   <!-- <p>Printstudio.co.id</p> -->
 </footer>
 <!-- akhir footer -->
