--- a/fitur_desain/page2/page2.html
+++ b/fitur_desain/page2/page2.html
@@ -12,10 +12,25 @@
 	<nav class="navbar navbar-dark navbar-expand-lg bg-primary bg-gradient shadow fixed-top mb-5">
       <div class="container-fluid">
         <a class="navbar-brand" href="../page1/page1.html">kembali</a>
-        <form class="d-flex" role="search">
+        <!-- <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Cari desain" aria-label="Search">
         <button class="btn btn-outline-success text-white" type="submit">Cari</button>
-       </form>
+       </form> -->
+       <div class="dropdown">
+        <button class="btn btn-warning dropdown-toggle mt-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        kategori
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="user_fitur/t-shirt/index.html">streetwear</a></li>
+          <li><a class="dropdown-item" href="user_fitur/polo-shirt/index.html">artwork</a></li>
+          <li><a class="dropdown-item" href="user_fitur/ls-shirt/index.html">gathering</a></li>
+          <li><a class="dropdown-item" href="user_fitur/long-sleeve/index.html">komunitas</a></li>
+          <li><a class="dropdown-item" href="user_fitur/hoody/index.html">ultah</a></li>
+          <li><a class="dropdown-item" href="user_fitur/crewneck/index.html">typograpy</a></li>
+          <li><a class="dropdown-item" href="user_fitur/topi/index.html">vintage</a></li>
+          <li><a class="dropdown-item" href="user_fitur/tote-bag/index.html">sport</a></li>
+        </ul>
+       </div>
         <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -279,5 +294,6 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
