--- a/fitur_desain/page1/page1.html
+++ b/fitur_desain/page1/page1.html
@@ -11,13 +11,18 @@
 
 	<nav class="navbar navbar-dark navbar-expand-lg bg-primary bg-gradient shadow fixed-top mb-5">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../../index.html">kembali</a>
+        <a href="../../index.html">
+          <button class="btn btn-primary">kembali</button>
+        </a>
+        <a href="../../index.html">
+          <button class="btn btn-primary">Home</button>
+        </a>
         <!-- <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Cari desain" aria-label="Search" id="keyword">
         <button class="btn btn-outline-success text-white" type="submit">Cari</button>
        </form> -->
        <div class="dropdown">
-        <button class="btn btn-warning dropdown-toggle mt-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <button class="btn btn-warning dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
         kategori
         </button>
         <ul class="dropdown-menu">
