--- a/fitur_desain/kategori/anime/page3/desain12.html
+++ b/fitur_desain/kategori/anime/page3/desain12.html
@@ -121,7 +121,7 @@
 			<p id="kembalitext2">kembali</p>
 		</a>
 		
-		<a href="../../../../auth" id="home">Home <i class="fas fa-home"></i></a>
+		<a href="../../../../index.html" id="home">Home <i class="fas fa-home"></i></a>
 		<!--<a href="../../auth/registration" id="daftar">Daftar</a>
 		<a href="../../auth/login" id="login">Login</a>-->
 	</div>
