--- a/fitur_desain/kategori/artwork/page1/page1.html
+++ b/fitur_desain/kategori/artwork/page1/page1.html
@@ -11,10 +11,10 @@
 
 	<nav class="navbar navbar-dark navbar-expand-lg bg-primary bg-gradient shadow fixed-top mb-5">
       <div class="container-fluid">
-        <a href="../../../../auth">
+        <a href="../../../../index.html">
           <button class="btn btn-primary shadow">kembali</button>
         </a>
-        <a href="../../../../auth">
+        <a href="../../../../index.html">
           <button class="btn btn-primary shadow">Home</button>
         </a>
         <!-- <form class="d-flex" role="search">
