--- a/fitur_desain/kategori/streetwear/page3/page3.html
+++ b/fitur_desain/kategori/streetwear/page3/page3.html
@@ -14,7 +14,7 @@
         <a href="../page2/page2.html">
           <button class="btn btn-primary shadow">kembali</button>
         </a>
-        <a href="../../../../auth">
+        <a href="../../../../index.html">
           <button class="btn btn-primary shadow">Home</button>
         </a>
         <!-- <form class="d-flex" role="search">
