--- a/fitur_desain/page1/page1.html
+++ b/fitur_desain/page1/page1.html
@@ -26,9 +26,9 @@
         kategori
         </button>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="../kategori/streetwear/page1/page1.html">STREETWEAR</a></li>
-          <li><a class="dropdown-item" href="../kategori/anime/page1/page1.html">ANIME</a></li>
-          <li><a class="dropdown-item" href="../kategori/artwork/page1/page1.html">ARTWORK</a></li>
+          <li><a class="dropdown-item" href="../kategori/streetwear/page1/page1.html">Streetwear</a></li>
+          <li><a class="dropdown-item" href="../kategori/anime/page1/page1.html">Anime</a></li>
+          <li><a class="dropdown-item" href="../kategori/artwork/page1/page1.html">Artwork</a></li>
           <!-- <li><a class="dropdown-item" href="../kategori/gathering/page1/page1.html">gathering</a></li>
           <li><a class="dropdown-item" href="../kategori/komunitas/page1/page1.html">komunitas</a></li>
           <li><a class="dropdown-item" href="../kategori/ultah/page1/page1.html">ultah</a></li>
