--- a/fitur_desain/kategori/artwork/page3/page3.html
+++ b/fitur_desain/kategori/artwork/page3/page3.html
@@ -26,9 +26,9 @@
             kategori
             </button>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="../../streetwear/page1/page1.html">STREETWEAR</a></li>
-            <li><a class="dropdown-item" href="../../anime/page1/page1.html">ANIME</a></li>
-            <li><a class="dropdown-item" href="../../artwork/page1/page1.html">ARTWORK</a></li>
+            <li><a class="dropdown-item" href="../../streetwear/page1/page1.html">Streetwear</a></li>
+            <li><a class="dropdown-item" href="../../anime/page1/page1.html">Anime</a></li>
+            <li><a class="dropdown-item" href="../../artwork/page1/page1.html">Artwork</a></li>
             <!-- <li><a class="dropdown-item" href="../../gathering/page1/page1.html">gathering</a></li>
             <li><a class="dropdown-item" href="../../komunitas/page1/page1.html">komunitas</a></li>
             <li><a class="dropdown-item" href="../../ultah/page1/page1.html">ultah</a></li>
