--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                <p class="mt-1"><i class="bi bi-printer"></i> Sablon studio</p>
               <!-- <img src="img/logo2.png" alt="Bootstrap" width="50"> -->
             </a>
-            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler ms-auto bg-warning type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
             </button>
             <!-- <div class="collapse navbar-collapse" id="navbarNav">
