--- a/fitur_edit/a4.html
+++ b/fitur_edit/a4.html
@@ -150,7 +150,7 @@
 
 <script src="lib/fabric.min.js"></script>
 <script src="index.js"></script>
-<script src="http://rawgit.com/bramstein/fontfaceobserver/master/fontfaceobserver.js" ></script>
+<script src="https://rawgit.com/bramstein/fontfaceobserver/master/fontfaceobserver.js" ></script>
 <!-- <script>
     const canvas = new fabric.Canvas('canvas',{
     width: fabric.util.parseUnit('21cm'),
