--- a/fitur_edit/a5.html
+++ b/fitur_edit/a5.html
@@ -151,7 +151,7 @@
     
 <script src="lib/fabric.min.js"></script>
 <script src="index.js"></script>
-<script src="http://rawgit.com/bramstein/fontfaceobserver/master/fontfaceobserver.js" ></script>
+<script src="https://rawgit.com/bramstein/fontfaceobserver/master/fontfaceobserver.js" ></script>
 <!-- <script>
     const canvas = new fabric.Canvas('canvas',{
         width: fabric.util.parseUnit('14.8cm'),
