--- a/fitur_edit/index.html
+++ b/fitur_edit/index.html
@@ -152,7 +152,7 @@
 <script src="lib/fabric.min.js"></script>
 <script src="lib/jscolor.js"></script>
 <script src="index.js"></script>
-<script src="http://rawgit.com/bramstein/fontfaceobserver/master/fontfaceobserver.js" ></script>
+<script src="https://rawgit.com/bramstein/fontfaceobserver/master/fontfaceobserver.js" ></script>
 <!-- <script>
     const canvas = new fabric.Canvas('canvas',{
         width: fabric.util.parseUnit('10.5cm'),
