--- a/fitur_edit/a3.html
+++ b/fitur_edit/a3.html
@@ -34,9 +34,9 @@
         @media screen and (max-width: 1200px) {
           .canvascontainer {
             position: absolute;
-            top: 330px;
-            left: 150px;
-            zoom: 80%;
+            top: 140px;
+            left: 23px;
+            transform: scale(0.8);
             /* background-color: blueviolet; */
            }
            .container1 {
@@ -56,9 +56,9 @@
         @media screen and (max-width: 760px) {
           .canvascontainer {
             position: absolute;
-            top: 520px;
-            left: 183px;
-            zoom: 36%;
+            top: -195px;
+            left: -185px;
+            transform: scale(0.36);
             /* background-color: blueviolet; */
            }
            .container1 {
