--- a/fitur_edit/a4.html
+++ b/fitur_edit/a4.html
@@ -49,9 +49,9 @@
       @media screen and (max-width: 760px) {
         .canvascontainer {
             position: absolute;
-            left: 45px;
-            top: 380px;
-            zoom: 50%;
+            left: -123px;
+            top: -18px;
+            transform: scale(0.5);
             /* background-color: blueviolet; */
            }
       }
