--- a/fitur_edit/a5.html
+++ b/fitur_edit/a5.html
@@ -49,9 +49,9 @@
         @media screen and (max-width: 760px) {
           .canvascontainer {
             position: absolute;
-            top: 270px;
-            left: 34px;
-            zoom: 70%;
+            top: 95px;
+            left: -33px;
+            transform: scale(0.7);
             /* background-color: blueviolet; */
            }
         
