--- a/fitur_edit/dtf.html
+++ b/fitur_edit/dtf.html
@@ -51,6 +51,9 @@
             transform: scale(0.185);
             /* background-color: blueviolet; */
            }
+          #canvas {
+            border: black solid 2px;
+          }
       }
     </style>
 </head>
