--- a/fitur_edit/dtf.html
+++ b/fitur_edit/dtf.html
@@ -36,6 +36,7 @@
             position: absolute;
             left: -480px;
             top: -800px;
+            transform: scale(0.185);
             /* background-color: blueviolet; */
            }
            #canvas {
@@ -46,7 +47,7 @@
         @media screen and (max-width: 760px) {
         .canvascontainer {
             position: absolute;
-            left: -670px;
+            left: -665px;
             top: -973px;
             transform: scale(0.185);
             /* background-color: blueviolet; */
