--- a/fitur_edit/a4.html
+++ b/fitur_edit/a4.html
@@ -13,7 +13,7 @@
         }
         .canvascontainer {
             position: absolute;
-            left: 200px;
+            /* left: 200px; */
             top: 200px;
             /* background-color: blueviolet; */
            }
@@ -35,7 +35,7 @@
           .canvascontainer {
             position: absolute;
             top: 250px;
-            left: 80px;
+            /* left: 80px; */
             /* background-color: blueviolet; */
            }
            .container1 {
@@ -49,9 +49,10 @@
       @media screen and (max-width: 760px) {
         .canvascontainer {
             position: absolute;
-            left: -128px;
+            /* left: -123px; */
             top: -18px;
             transform: scale(0.5);
+            /* transform-origin: 0 0; */
             /* background-color: blueviolet; */
            }
       }
@@ -97,7 +98,7 @@
         </a>
         <br>
         
-            <div class="color"  id="warna">
+            <div class="color" id="warna">
                 <label for="">Warna: </label>
                 <input type="color" value="#752BFF" id="color">
             </div>
