--- a/fitur_edit/a5.html
+++ b/fitur_edit/a5.html
@@ -13,7 +13,7 @@
         }
         .canvascontainer {
             position: absolute;
-            left: 250px;
+            /* left: 250px; */
             top: 200px;
             /* background-color: blueviolet; */
            }
@@ -35,7 +35,7 @@
           .canvascontainer {
             position: absolute;
             top: 250px;
-            left: 180px;
+            /* left: 180px; */
             /* background-color: blueviolet; */
            }
            .container1 {
@@ -50,7 +50,7 @@
           .canvascontainer {
             position: absolute;
             top: 95px;
-            left: -40px;
+            /* left: -33px; */
             transform: scale(0.7);
             /* background-color: blueviolet; */
            }
@@ -98,7 +98,7 @@
         </a>
         <br>
         
-            <div class="color"  id="warna">
+            <div class="color" id="warna">
                 <label for="">Warna: </label>
                 <input type="color" value="#752BFF" id="color">
             </div>
