--- a/fitur_edit/dtf.html
+++ b/fitur_edit/dtf.html
@@ -6,15 +6,16 @@
     <title>DTF</title>
     <link rel="stylesheet" href="index.css">
     <script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js">
-    </script> 
+    </script>
     <style>
         #dtf{
             background-color: yellowgreen;
         }
         .canvascontainer {
             position: absolute;
-            left: 300px;
-            top: 200px;
+            /* left: -350px; */
+            top: -860px;
+            transform: scale(0.25);
             /* background-color: blueviolet; */
            }
         #canvas {
@@ -26,35 +27,45 @@
             /* left: 10%; */
         }
         .container1 {
-            height: 130%;
+            height: 145%;
         }
         .container2 {
-            height: 130%;
+            height: 145%;
         }
         @media screen and (max-width: 1200px) {
           .canvascontainer {
             position: absolute;
-            left: -480px;
+            /* left: -480px; */
             top: -800px;
-            transform: scale(0.185);
             /* background-color: blueviolet; */
            }
            #canvas {
             left: 0%;
-            border: black solid 5px;
+            border: black solid 10px;
            }
         }
         @media screen and (max-width: 760px) {
         .canvascontainer {
             position: absolute;
-            left: -651px;
+            /* left: -645px; */
             top: -973px;
-            transform: scale(0.180);
+            transform: scale(0.185);
             /* background-color: blueviolet; */
            }
-          #canvas {
+           #canvas {
+            /* zoom: 30%; */
+            /* position: relative;
+            top: 60%; */
+            position: absolute;
             border: black solid 2px;
-          }
+            /* left: 10%; */
+        }
+           .container1 {
+            height: 110%;
+           }
+          .container2 {
+            height: 110%;
+           }
       }
     </style>
 </head>
@@ -98,7 +109,7 @@
   </a>
         <br>
     
-          <div class="color"  id="warna">
+          <div class="color" id="warna">
               <label for="">Warna: </label>
               <input type="color" value="#752BFF" id="color">
           </div>
@@ -160,6 +171,49 @@
         height: fabric.util.parseUnit('42cm'),
 });
 </script> -->
+<!-- <script>
+var canvas2 = document.querySelector(".cvs");
+var ctx2 = canvas2.getContext("2d");
 
+var bobRoss = new Image();
+bobRoss.src = '';
+
+bobRoss.onload = function() {
+  ctx2.drawImage(bobRoss, 10, 10, bobRoss.width, bobRoss.height);
+}
+
+fullscreenify(canvas2);
+
+function fullscreenify(canvas2) {
+  window.addEventListener('resize', function() {
+    resize(canvas2);
+  }, false);
+  resize(canvas2);
+}
+
+function resize(canvas2) {
+  var scale = {
+    x: 1,
+    y: 1
+  };
+  var style;
+  scale.x = (window.innerWidth - 45) / canvas2.width;
+  scale.y = (window.innerHeight - 45) / canvas2.height;
+
+  if (scale.x > 1) {
+    scale = '1, 1';
+  } else if (scale.x < scale.y) {
+    scale = scale.x + ', ' + scale.x;
+  } else {
+    scale = scale.y + ', ' + scale.y;
+  }
+
+  canvas2.setAttribute('style', style + ' ' + '-ms-transform-origin: left top; -webkit-transform-origin: left top; -moz-transform-origin: left top; -o-transform-origin: left top; transform-origin: left top; -ms-transform: scale(' + scale + '); -webkit-transform: scale3d(' + scale + ', 1); -moz-transform: scale(' + scale + '); -o-transform: scale(' + scale + '); transform: scale(' + scale + ');');
+}
+
+
+
+</script> -->
+  
 </body>
 </html>
