--- a/fitur_edit/index.html
+++ b/fitur_edit/index.html
@@ -14,7 +14,7 @@
         .canvascontainer {
             position: absolute;
             top: 200px;
-            left: 330px;
+            /* left: 330px; */
             /* background-color: blueviolet; */
            }
         #canvas {
@@ -29,7 +29,7 @@
           .canvascontainer {
             position: absolute;
             top: 250px;
-            left: 200px;
+            /* left: 200px; */
             /* background-color: blueviolet; */
            }
         .container1 {
@@ -44,7 +44,7 @@
           .canvascontainer {
             position: absolute;
             top: 190px;
-            left: 21px;
+            /* left: 25px; */
             /* background-color: blueviolet; */
            }
         .container1 {
@@ -97,7 +97,7 @@
 
         <br>
        
-            <div class="color"  id="warna">
+            <div class="color" id="warna">
                 <label for="">Warna: </label>
                <input type="color" value="#752BFF" id="color">
                <!-- <input id='colorPicker' value="#000000" data-jscolor=""> -->
