--- a/fitur_edit/a5.html
+++ b/fitur_edit/a5.html
@@ -102,6 +102,11 @@
                 <label for="">Warna: </label>
                 <input type="color" value="#752BFF" id="color">
             </div>
+            <div class="border">
+                <label for="">Border:</label>
+                <input type="color" id="border-color">
+                <input type="range" min="0" max="10" step="1" value="1" id="border-width">
+            </div>
              <div class="width">
                 <label>Lebar</label>
                 <input type="number" id="lebar">
