--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </div>-->
     <div class="row justify-content-center mt-4" style="padding:2%;">
       <a href="fitur_desain/page1/page1.html" class="d-md-none btn btn-primary btn-lg bg-gradient"><i class="bi bi-file-image text-white"></i> Cari desain keren dan menarik</a>
-      <a href="https://api.whatsapp.com/send?phone=6285892022876&text=saya%20ingin%20konsultasi%20dan%20tanya%20tanya%20mengenai%20desain%20grafis?" class="d-md-none btn btn-primary btn-lg bg-gradient mt-2"><i class="bi bi-whatsapp"></i> Konsultasi dan bantuan desain</a>
+      <a href="fitur_edit/index.html" class="d-md-none btn btn-primary btn-lg bg-gradient mt-2"><i class="bi bi-pencil-square"></i> Edit dan buat desainmu sendiri</a>
       
       
       <div class="d-none d-md-block col-md-4 text-center">
@@ -105,9 +105,9 @@
       </div>
       <div class="d-none d-md-block col-md-4 text-center">
         <div class="card text-center bg-primary-subtle shadow" style="width: 100%;  height: 90%;">
-          <h6 class="mt-4"><em>Konsultasi dan bantuan desain</em></h6>
+          <h6 class="mt-4"><em>Edit dan buat desainmu sendiri</em></h6>
           <div class="card-body mb-4">
-           <a href="https://api.whatsapp.com/send?phone=6285892022876&text=saya%20ingin%20konsultasi%20dan%20tanya%20tanya%20mengenai%20desain%20grafis?" class="btn btn-primary bg-gradient mt-2"><i class="bi bi-whatsapp"></i> Desainer</a>
+           <a href="fitur_edit/index.html" class="btn btn-primary bg-gradient mt-2"><i class="bi bi-pencil-square"></i></i> Edit desain</a>
           </div>
         </div>
       </div>
